--- a/app/src/main/res/layout/item_recorder.xml
+++ b/app/src/main/res/layout/item_recorder.xml
@@ -40,5 +40,14 @@
     </FrameLayout>
 
 
+    <com.github.ybq.android.spinkit.SpinKitView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/spin_kit"
+        style="@style/SpinKitView.Small.Circle"
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
+        android:layout_gravity="center_horizontal"
+        android:layout_toLeftOf="@id/id_recorder_length"
+        app:SpinKit_Color="@android:color/darker_gray"/>
 
 </RelativeLayout>
